# marky

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yaml
benchmarks/: CMakeLists.txt  benchmark_geometry.cpp
include/landy/: landy.hpp  pga.hpp
include/marky/: marky.hpp  pga.hpp
include/tooly/: tooly.hpp
test/: CMakeLists.txt  test_landy.cpp  test_marky.cpp  test_pga.cpp
